# cs576-project-group-4

./: .dockerignore  .gitattributes  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: README.md  glu.py  glu_stat.txt  internet.py  layer1PHY.py  main.py  model.py  packet_queue.py  requirements.txt
src/cmds/: ue.sh
src/glu/: __init__.py  glu.py  model.py  packet_queue.py
src/layer1/: __init__.py  api.py  core.py
src/layer3/: Cargo.toml  pyproject.toml
src/layer3/scripts/: setup_internet.sh
src/layer3/src/: cabernet.rs  error.rs  lib.rs  main.rs  ue.rs
src/static/css/: styles.css
src/static/js/: api.js  canvas.js  drag-drop.js  index.js
src/templates/: index.html
